fixed modal window alignment for IE

--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -110,12 +110,14 @@ div.separator
   margin 60px auto 0 auto
   min-height 100px
   max-width 800px
+  text-align center
 
   -webkit-perspective: 400px;
   -webkit-perspective-origin: 50% 25%;
 
   #inner 
     font-size 110%
+    text-align left
     border 1px solid #666
     background-color #fff
     border-radius 6px
